fix: added latest changes

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,8 +1,8 @@
 name: aiphotokit
-description: "AI photo Generator & Editor"
+description: "AI Photo Editor"
 publish_to: 'none' 
 
-version: 1.0.0+4
+version: 1.0.0+5
 
 environment:
   sdk: ^3.7.2
